# audio2txt

./: .gitignore  DEVELOPMENT_STATUS.md  GPT5_NANO_INTEGRATION.md  MIGRATION_COMPLETE.md  PLAN_v4_ENTERPRISE.md  README.md  process_audio.py  pyproject.toml  run_server.py  run_web.py  solutions.yaml  test_v4_process.py
apps/api/: celery_app.py  database.py  main.py  notifications.py  security.py  services.py  tasks.py
apps/api/engines/: __init__.py  assemblyai_engine.py  chinese_processor.py  deepgram_engine.py  openai_engine.py
apps/api/routers/: __init__.py  auth.py  system.py  transcription.py  vocabulary.py
apps/web/: app.py
apps/web/minimal_frontend/: README.md  app.js  index.html  serve_frontend.py  styles.css
archive/old_logs/: final_output.txt  process_log.txt  process_output.txt
archive/old_scripts/: process_consultant_visit.py  process_final_fixed.py  process_m4a.py  process_simple.py  process_visit_simple.py  test_save_only.py  test_summary.py  test_wav.py
config/: default.yaml
docs/: APP_DEVELOPMENT.md  PLAUD_NOTE_COMPARISON.md  PRICING_STRATEGY.md  TECH_STACK_RECOMMENDATION.md
examples/: 01_basic_transcription.py  02_full_pipeline.py  03_batch_processing.py  README.md
output/consultant_visit/: transcript.txt
output/quality_test/: 012_Tea_Coffee_16k_mono_v3_gpu.txt  012_Tea_Coffee_summary.md
scripts/: test_pdf_gen.py  test_summary_only.py  test_v4_process.py
